--- a/css/main.css
+++ b/css/main.css
@@ -2193,18 +2193,14 @@ body.mobile-nav-active #mobile-nav-toggle {
         .home-banner-area .social-icons ul li a i {
           margin-right: 8px; }
 
-.banner-area {
-  background: url(../img/banner/common-banner.jpg) no-repeat;
+.banner-area-index {
+  background: url(/img/index-banner.jpg),rgb(0, 0, 0) no-repeat;
   background-size: cover;
   position: relative; }
-  .banner-area:after {
-    content: '';
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    bottom: 0px;
-    right: 0px;
-    background: rgb(0, 0, 0); }
+  .banner-area-commercial {
+  background: url(/img/commercial-banner.jpg),rgb(0, 0, 0) no-repeat;
+  background-size: cover;
+  position: relative; }
 
 .banner-content {
   text-align: left; }
